fixed z-index issue with flipping panels using browser detection

--- a/src/components/BitPanelGroupWithPowerLabels/BitPanelGroupWithPowerLabels.scss
+++ b/src/components/BitPanelGroupWithPowerLabels/BitPanelGroupWithPowerLabels.scss
@@ -17,7 +17,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  z-index: -1;
+  // z-index: -1;
   // cursor: pointer;
 
   &__power {
